--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
   <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
   <script src="https://cdn.babylonjs.com/webgpu/babylon.webgpu.min.js"></script>
 
-  <script src="./main.js"></script>
+  <script src="./main.patched.js"></script>
 
 <script>
   function loadComet(id) {
@@ -545,3 +545,4 @@ window.setSimTime?.(jdStart, { resetParticles: true, focus: true });
 </script>
 </body>
 </html>
+
