--- a/index.html
+++ b/index.html
@@ -233,11 +233,26 @@
       <input id="activityScaleInput" type="number" step="0.1" min="0" value="1">
     </label>
 
-    <label for="particleCountInput">Particle Count (per sec):</label>
-    <input type="number" id="particleCountInput" step="1" min="1" max="3000" value="100" />
+<div class="activity-field">
+  <label for="activityHalfLifeInput">Activity decay half-life (e-days):</label>
+  <input id="activityHalfLifeInput" type="number" step="10" min="1" value="1500">
+</div>
 
-    <label for="velocitySlider">Simulation speed: <span id="velocityValue">1</span></label>
-    <input type="range" id="velocitySlider" min="0" max="100" value="0" step="1">
+<div class="activity-field">
+  <label for="activityExponentInput">Activity exponent n (Q = k / r^n):</label>
+  <input id="activityExponentInput" type="number" step="0.1" min="0" max="6" value="4">
+</div>
+
+<div class="activity-field">
+  <label for="activityScaleInput">Activity scale k @ 1 AU:</label>
+  <input id="activityScaleInput" type="number" step="0.1" min="0" value="1">
+</div>
+
+  <label for="particleCountInput">Particle Count (per sec):</label>
+  <input type="number" id="particleCountInput" step="1" min="1" max="3000" value="100" />
+
+  <label for="velocitySlider">Simulation speed: <span id="velocityValue">1</span></label>
+  <input type="range" id="velocitySlider" min="0" max="100" value="0" step="1">
 
 <div id="orbitControls" style="
   position: absolute;
@@ -422,6 +437,38 @@
   " onclick="loadComet('3I')">3I/ATLAS</button>
 </div>
 
+<div id="actBoxQ" style="
+  position: fixed;
+  bottom: 190px;   /* ~46px above particle counter */
+  right: 20px;
+  z-index: 1002;
+  font-family: monospace, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  background: rgba(0,0,0,0.6);
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  display: inline-block;
+  white-space: nowrap;
+">Q: --</div>
+
+<div id="actBoxDecay" style="
+  position: fixed;
+  bottom: 150px;
+  right: 20px;
+  z-index: 1002;
+  font-family: monospace, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  background: rgba(0,0,0,0.6);
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  display: inline-block;
+  white-space: nowrap;
+">decay: --</div>
+
 <div id="particleCounter" style="
   position: fixed;
   bottom: 110px;
@@ -466,7 +513,7 @@
   <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
   <script src="https://cdn.babylonjs.com/webgpu/babylon.webgpu.min.js"></script>
 
-  <script src="./main.patched.js"></script>
+  <script src="./main.js"></script>
 
 <script>
   function loadComet(id) {
@@ -522,13 +569,10 @@
 
 window.updateOrbitParameters?.();
 
-const daysBeforeT = 400; // closer to T? lower this (e.g., 2 or 1)
+const daysBeforeT = 400;
 const jdStart = c.T - daysBeforeT;
 
 window.setSimTime?.(jdStart, { resetParticles: true, focus: true });
-
-
-
   }
 </script>
 
