--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
 <select id="visModeSelect">
   <option value="none">None</option>
   <option value="beta">β value</option>
+  <option value="age">Age</option>
+  <option value="dist">Distance from nucleus</option>
+  <option value="vrel">Relative velocity</option>
 </select>
 
   <label for="velocitySlider">Simulation speed: <span id="velocityValue">1</span></label>
