--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
   font-family: Inter, system-ui, sans-serif;
   color: #e7f0ff;
   background: linear-gradient(180deg, rgba(11, 14, 19, 0.85), rgba(12,16,22,0.85));
-  border: 1px solid rgba(120,150,180,0.35);
+  border: 1px solid rgba(218, 218, 218, 0.35);
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.45), inset 0 1px 0 rgba(255,255,255,0.06);
   backdrop-filter: blur(6px);
@@ -631,7 +631,7 @@
   <div style="position:relative;">
     <canvas id="betaCurveCanvas"
       width="340" height="260"
-      style="width:340px;height:260px; background:#0a1016; border-radius:10px; border:1px solid rgba(70,100,130,0.5);">
+      style="width:340px;height:260px; background:#0a1016; border-radius:10px; border:1px solid rgba(218, 218, 218, 0.5);">
     </canvas>
 
     <div id="betaCurveTip" style="
@@ -743,3 +743,4 @@ window._skipInitialFocus = false;
 </script>
 </body>
 </html>
+
