--- a/index.html
+++ b/index.html
@@ -342,6 +342,23 @@
   <option value="vrel">Relative velocity</option>
 </select>
 
+<label for="camXInput">Camera locking position x</label>
+<input type="text" id="camXInput" value="1" placeholder="e.g. -0.177135" />
+
+<label for="camYInput">Camera locking position y</label>
+<input type="text" id="camYInput" value="1" placeholder="e.g. 0.967241" />
+
+<label for="camZInput">Camera locking position z</label>
+<input type="text" id="camZInput" value="1" placeholder="e.g. 0.000042" />
+
+<label for="camUnitSelect">Units</label>
+<select id="camUnitSelect">
+  <option value="AU" selected>AU</option>
+  <option value="m">meters</option>
+  <option value="km">kilometers</option>
+  <option value="scene">scene units (already scaled)</option>
+</select>
+
   <label for="velocitySlider">Simulation speed: <span id="velocityValue">1</span></label>
   <input type="range" id="velocitySlider" min="0" max="100" value="0" step="1">
 
@@ -356,6 +373,26 @@
   font-family: sans-serif;
 ">
 </div>
+
+    <button style="
+    background: none;
+    border: 1.5px solid #ccc;
+    color: #eee;
+    padding: 6px 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  " id="lockCamPosBtn">Lock camera position</button>
+
+  <button style="
+    background: none;
+    border: 1.5px solid #ccc;
+    color: #eee;
+    padding: 6px 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  " id="lockEarthBtn">Lock to Earth</button>
 
   <button style="
     background: none;
