--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
 
     #uiOverlay label {
       display: block;
-      margin-top: 6px;
+      margin-top: 4px;
       font-size: 14px;
     }
 
-      #uiOverlay input[type="range"],
-      #uiOverlay input[type="number"],
-      #uiOverlay input[type="text"],
-      #uiOverlay select {
-        width: 100%;
-        margin-bottom: 6px;
-      }
+    #uiOverlay input[type="range"],
+    #uiOverlay input[type="number"],
+    #uiOverlay input[type="text"],
+    #uiOverlay select {
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
 
     button {
       margin-top: 10px;
@@ -284,6 +285,12 @@
   cursor: pointer;
 }
 
+#uiOverlay input,
+#uiOverlay select {
+  width: 100%;
+  box-sizing: border-box;
+}
+
 </style>
 
 <div id="timelineWrapper">
@@ -343,13 +350,13 @@
 </select>
 
 <label for="camXInput">Camera locking position x</label>
-<input type="text" id="camXInput" value="1" placeholder="e.g. -0.177135" />
+<input type="text" id="camXInput" value="1"/>
 
 <label for="camYInput">Camera locking position y</label>
-<input type="text" id="camYInput" value="1" placeholder="e.g. 0.967241" />
+<input type="text" id="camYInput" value="1"/>
 
 <label for="camZInput">Camera locking position z</label>
-<input type="text" id="camZInput" value="1" placeholder="e.g. 0.000042" />
+<input type="text" id="camZInput" value="1"/>
 
 <label for="camUnitSelect">Units for locking</label>
 <select id="camUnitSelect">
@@ -358,9 +365,10 @@
   <option value="km">kilometers</option>
 </select>
 
+<label for="synchroneDaysInput">Synchrone days input (d)</label>
 <input id="synchroneDaysInput"  value="-120,-60,-30,-10" />
+<label for="synchroneBetasInput">Synchrone betas input (0-1)</label>
 <input id="synchroneBetasInput" value="0.01,0.05,0.1,0.3,0.7" />
-<button id="generateSynchronesBtn" type="button">Generate synchrones</button>
 
   <label for="velocitySlider">Simulation speed: <span id="velocityValue">1</span></label>
   <input type="range" id="velocitySlider" min="0" max="100" value="0" step="1">
@@ -376,6 +384,26 @@
   font-family: sans-serif;
 ">
 </div>
+
+    <button style="
+    background: none;
+    border: 1.5px solid #ccc;
+    color: #eee;
+    padding: 6px 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  " id="generateSyndynesBtn">Generate syndynes</button>
+
+    <button style="
+    background: none;
+    border: 1.5px solid #ccc;
+    color: #eee;
+    padding: 6px 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  " id="generateSynchronesBtn">Generate synchrones</button>
 
     <button style="
     background: none;
@@ -772,5 +800,3 @@ window._skipInitialFocus = false;
 </script>
 </body>
 </html>
-
-
