--- a/index.html
+++ b/index.html
@@ -405,6 +405,8 @@
     transition: background-color 0.3s ease, color 0.3s ease;
   " id="generateSynchronesBtn">Generate synchrones</button>
 
+  <button id="exportSynSydCSVBtn">Export syn/synd CSV (RA/Dec)</button>
+
     <button style="
     background: none;
     border: 1.5px solid #ccc;
