--- a/index.html
+++ b/index.html
@@ -405,7 +405,15 @@
     transition: background-color 0.3s ease, color 0.3s ease;
   " id="generateSynchronesBtn">Generate synchrones</button>
 
-  <button id="exportSynSydCSVBtn">Export syn/synd CSV (RA/Dec)</button>
+      <button style="
+    background: none;
+    border: 1.5px solid #ccc;
+    color: #eee;
+    padding: 6px 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  " id="exportSynSydCSVBtn">Export syn/synd CSV (RA/Dec)</button>
 
     <button style="
     background: none;
